fix spacing on portfolio page with addition of cards and replaced image link and nav bar references

--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ font-family: 'Hind Vadodara', sans-serif;
 padding: 5px;
 }
 
-.card {
-    margin: 5px;
+.card {  
+    text-align: center;
 }
 
 .card-body {
@@ -54,7 +54,7 @@ padding: 5px;
  }
 
  .portfolio-images img {
-    padding-bottom: 25px;
+    padding-bottom: 10px;
  }
 
 .footer {
